# csc211H

./: .gitignore  CMakeLists.txt  LICENSE  README.md  git_intro.md
code/exercises/: RunningTests.md
code/exercises/easy/collatz_conjecture/: PROBLEM.md
code/exercises/medium/sieve/: PROBLEM.md  solution.cpp
code/from_replit/: arrayPointers.cpp  guessOutput.cpp
git/: TryGit.md  try_it_out.md
git/code/exercises/: HOW_TO_TEST.md
git/code/exercises/easy/collatz_conjecture/: collatz.cpp  solution.cpp
git/code/exercises/easy/sum_square_difference/: PROBLEM.md  solution.cpp  sum_square_difference.cpp
git/code/exercises/medium/sieve/: sieve_of_eratosthenes.cpp
group_projects/gp_sp23/Group1/: main.cpp  project_info.md
group_projects/gp_sp23/template/: main.cpp
testing/: collatz_tests.cpp  sieve_tests.cpp  sum_square_tests.cpp
